<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tk.easthigh.witsmobile.FaqFragment">

    <RelativeLayout
        android:id="@+id/container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp">

        <!-- Introduction -->
        <TextView android:id="@+id/about_us_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/primary_text_default_material_light"
            android:text="@string/about_us_title" />

        <ImageView android:id="@+id/about_us_logo"
            android:layout_width="@dimen/about_us_logo"
            android:layout_height="@dimen/about_us_logo"
            android:layout_below="@id/about_us_title"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/img_ex_nihilo_logo"
            android:contentDescription="@string/about_us_logo_desc"/>
        <TextView android:id="@+id/about_us_logo_desc"
            android:layout_width="@dimen/about_us_logo"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_us_logo"
            android:gravity="center"
            android:text="@string/about_us_logo_desc" />

        <TextView android:id="@+id/about_us_introduction0"
            android:layout_below="@id/about_us_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text_default_material_light"
            android:layout_toEndOf="@id/about_us_logo"
            android:text="@string/about_us_introduction0" />
        <TextView android:id="@+id/about_us_introduction1"
            android:layout_below="@id/about_us_introduction0"
            style="@style/noRecyclerView"
            android:text="@string/about_us_introduction1" />
        <TextView android:id="@+id/about_us_contact"
            android:layout_below="@id/about_us_introduction1"
            style="@style/noRecyclerView"
            android:text="@string/about_us_contact" />

        <!-- Credits -->
        <TextView android:id="@+id/about_us_devtest_title"
            android:layout_below="@id/about_us_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="1dp"
            android:textColor="@color/primary_text_default_material_light"
            android:text="@string/about_us_devtest_title" />
        <TextView android:id="@+id/about_us_devtest_note"
            android:layout_below="@id/about_us_devtest_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="italic"
            android:layout_marginBottom="8dp"
            android:textColor="#555"
            android:text="@string/about_us_devtest_note" />

        <!-- Developers -->
        <TextView android:id="@+id/about_us_dev_names"
            android:layout_below="@id/about_us_devtest_note"
            style="@style/noRecyclerView.title"
            android:text="@string/about_us_dev_names" />
        <!-- Lead Dev -->
        <TextView android:id="@+id/about_us_lead_dev_name"
            android:layout_below="@id/about_us_dev_names"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textStyle="italic"
            android:textColor="@color/primary_text_default_material_light"
            android:text="@string/about_us_lead_dev_name" />
        <TextView android:id="@+id/about_us_lead_dev_title"
            android:layout_below="@id/about_us_dev_names"
            android:layout_toEndOf="@id/about_us_lead_dev_name"
            style="@style/noRecyclerView"
            android:text="@string/about_us_lead_dev_title" />
        <!-- Art Dev -->
        <TextView android:id="@+id/about_us_art_dev_name"
            android:layout_below="@id/about_us_lead_dev_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textStyle="italic"
            android:textColor="@color/primary_text_default_material_light"
            android:text="@string/about_us_art_dev_name" />
        <TextView android:id="@+id/about_us_art_dev_title"
            android:layout_below="@id/about_us_lead_dev_title"
            android:layout_toEndOf="@id/about_us_art_dev_name"
            style="@style/noRecyclerView"
            android:text="@string/about_us_art_dev_title" />
        <!-- Editor -->
        <TextView android:id="@+id/about_us_editor_dev_name"
            android:layout_below="@id/about_us_art_dev_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textStyle="italic"
            android:textColor="@color/primary_text_default_material_light"
            android:text="@string/about_us_editor_dev_name" />
        <TextView android:id="@+id/about_us_editor_dev_title"
            android:layout_below="@id/about_us_art_dev_title"
            android:layout_toEndOf="@id/about_us_editor_dev_name"
            style="@style/noRecyclerView"
            android:text="@string/about_us_editor_dev_title" />
        <!-- End Developers -->

        <!-- Bug Testers -->
        <TextView android:id="@+id/about_us_bug_tester_names"
            android:layout_below="@id/about_us_editor_dev_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/primary_text_default_material_light"
            android:text="@string/about_us_bug_tester_names" />
        <!-- TODO: Add bug testers -->

    </RelativeLayout>

</ScrollView>

